# AI-DEV-OS

./: .coverage  .flake8  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  baseline_roadmap_tests.txt  baseline_test_output.txt  coverage_report.txt  final_coverage_report.txt  final_final_test_report.txt  flake8_output.txt  main.py  mypy_out.txt  pyproject.toml  pytest.ini  pytest_output.txt  requirements-dev.txt  requirements.txt  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
app/: dashboard.py
coverage_annotate/: z_3d2795aa4ef7abd6_context.py,cover  z_3d2795aa4ef7abd6_daytona.py,cover  z_3d2795aa4ef7abd6_error_handling.py,cover  z_3d2795aa4ef7abd6_metrics.py,cover  z_3d2795aa4ef7abd6_monitoring.py,cover  z_3d2795aa4ef7abd6_security.py,cover  z_3d2795aa4ef7abd6_snapshot.py,cover  z_7950d1c88e272d92_github.py,cover  z_7950d1c88e272d92_linear.py,cover  z_7950d1c88e272d92_slack.py,cover  z_ce7b1d87055ee43c_core.py,cover  z_ce7b1d87055ee43c_models.py,cover  z_ce7b1d87055ee43c_monitoring_metrics.py,cover  z_ce7b1d87055ee43c_sandbox.py,cover  z_ce7b1d87055ee43c_simulation.py,cover  z_ce7b1d87055ee43c_skills.py,cover
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_REVIEW.md  CUSTOMIZATION.md  DATA_CONTRACTS.md  DEPENDENCY_STRATEGY.md  OBSERVABILITY_PLAN.md  ONBOARDING.md  RISK_REGISTER.md  RUNBOOKS.md  SECURITY_PLAN.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  VERSIONING.md  WORKFLOWS.md
scripts/: setup-sandboxes.py
tests/: conftest.py  test_context_manager.py  (+33 more)
(+29 files in other folders)
