[project]
name = "ai-dev-os"
version = "0.1.0"
description = "Autonomous AI Development Operating System — orchestrates agents, training, simulation, and integrations."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.13.3",
    "anthropic>=0.86.0",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "sentry-sdk>=2.55.0",
    "slack-sdk>=3.41.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_dev_os", "src/integrations"]

# ─── Tool Configuration ─────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501"]

